--- a/config.yaml.example
+++ b/config.yaml.example
@@ -1,7 +1,7 @@
 api_version: 2
 vm:
   base_box: 'ubuntu/bionic64'
-  base_box_version: '20200507.0.0'
+  base_box_version: '20200507.0.0' # Use latest to use latest version
   name: 'nvUbuntuDev01'
   cpus: 2
   memory: 4096
