--- a/base_box/config.json
+++ b/base_box/config.json
@@ -1,8 +1,4 @@
 {
-    "variables": {
-        "version": "",
-        "vagrant_access_token": ""
-    },
     "provisioners": [
         {
             "execute_command": "echo 'vagrant' | {{.Vars}} sudo -S -E sh -eux '{{.Path}}'",
@@ -16,7 +12,6 @@
         {
             "communicator": "ssh",
             "source_path": "ubuntu/bionic64",
-            "box_version": "20201007.0.0",
             "add_force": true,
             "provider": "virtualbox",
             "type": "vagrant"
@@ -27,8 +22,8 @@
             "type": "vagrant-cloud",
             "box_tag": "sajalshres/ubuntu-dev-box",
             "keep_input_artifact": true,
-            "access_token": "{{user `vagrant_access_token`}}",
-            "version": "{{user `version`}}"
+            "access_token": "{{env `VAGRANT_ACCESS_TOKEN`}}",
+            "version": "{{isotime \"2006.01.02.0.0\"}}"
         }
     ]
 }
