--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,19 +1,37 @@
-name: Run packer build on a template file
+name: Packer
 
 on:
   push:
-    branches:
-        - 'master'
+
 jobs:
-  packer_build:
+  packer:
     runs-on: ubuntu-latest
+    name: packer
+
     steps:
-      - uses: actions/checkout@v1
-      - name: Packer build
-        uses: riznob/packer-build-action@v1.1
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      # fix backwards incompatibilities in template
+      - name: Fix Template
+        uses: operatehappy/packer-github-actions@master
         with:
-          templateFile: 'config.json'
-          varFile: 'variables.json'
-          workingDir: './base_box'
+          command: fix
+
+      # validate templates
+      - name: Validate Template
+        uses: operatehappy/packer-github-actions@master
+        with:
+          command: validate
+          arguments: -syntax-only
+          target: base_box/config.json
+
+      # build artifact
+      - name: Build Artifact
+        uses: operatehappy/packer-github-actions@master
+        with:
+          command: build
+          arguments: "-color=false"
+          target: base_box/config.json
         env:
           VAGRANT_ACCESS_TOKEN: ${{ secrets.VAGRANT_ACCESS_TOKEN }}
