--- a/base_box/config.json
+++ b/base_box/config.json
@@ -1,10 +1,10 @@
 {
     "variables": {
         "vagrant_access_token": "",
-        "node_version": "15",
+        "node_version": "16",
         "python_version": "3.7",
-        "docker_compose_version": "1.28.5",
-        "nvm_version": "0.37.2"
+        "docker_compose_version": "1.29.2",
+        "nvm_version": "0.38.0"
     },
     "provisioners": [
         {
@@ -24,7 +24,7 @@
     "builders": [
         {
             "communicator": "ssh",
-            "source_path": "ubuntu/bionic64",
+            "source_path": "ubuntu/focal64",
             "add_force": true,
             "provider": "virtualbox",
             "type": "vagrant"
